<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>dev.majek.hexnicks</groupId>
    <artifactId>HexNicks</artifactId>
    <version>2.2.1</version>
    <packaging>jar</packaging>

    <name>HexNicks</name>

    <description>Simple nickname plugin with hex color code and gradient support.</description>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <distributionManagement>
        <repository>
            <id>majek-repo</id>
            <name>Majekdor repository</name>
            <url>https://repo.majek.dev/releases/</url>
        </repository>
        <snapshotRepository>
            <id>majek-snapshots</id>
            <name>Majekdor repository</name>
            <url>https://repo.majek.dev/snapshots/</url>
        </snapshotRepository>
    </distributionManagement>

    <pluginRepositories>
        <pluginRepository>
            <id>apache.snapshots</id>
            <url>https://repository.apache.org/snapshots/</url>
        </pluginRepository>
    </pluginRepositories>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.3.1</version>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <reportOutputDirectory>${project.basedir}/docs</reportOutputDirectory>
                    <destDir>docs</destDir>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.2.0</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.3.0-SNAPSHOT</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <relocations>
                                <relocation>
                                    <pattern>com.google.gson</pattern>
                                    <shadedPattern>dev.majek.relocations.com.google.gson</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>net.kyori.adventure.text.minimessage</pattern>
                                    <shadedPattern>dev.majek.relocations.net.kyori.adventure.text.minimessage</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>net.kyori.adventure.text.serializer.plain</pattern>
                                    <shadedPattern>dev.majek.relocations.net.kyori.adventure.text.serializer.plain</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>net.kyori.adventure.text.serializer.legacy</pattern>
                                    <shadedPattern>dev.majek.relocations.net.kyori.adventure.text.serializer.legacy</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>net.kyori.adventure.text.serializer.gson</pattern>
                                    <shadedPattern>dev.majek.relocations.net.kyori.adventure.text.serializer.gson</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>org.checkerframework</pattern>
                                    <shadedPattern>dev.majek.relocations.org.checkerframework</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>org.intellij</pattern>
                                    <shadedPattern>dev.majek.relocations.org.intellij</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>org.jetbrains</pattern>
                                    <shadedPattern>dev.majek.relocations.org.jetbrains</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>org.bstats</pattern>
                                    <shadedPattern>dev.majek.relocations.org.bstats</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>com.tchristofferson</pattern>
                                    <shadedPattern>dev.majek.relocations.com.tchristofferson</shadedPattern>
                                </relocation>
                            </relocations>
                            <minimizeJar>true</minimizeJar>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>

    <repositories>
        <repository>
            <id>papermc-repo</id>
            <url>https://papermc.io/repo/repository/maven-public/</url>
        </repository>
        <repository>
            <id>sonatype</id>
            <url>https://oss.sonatype.org/content/groups/public/</url>
        </repository>
        <repository>
            <id>placeholderapi</id>
            <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <repository>
            <id>essentials-releases</id>
            <url>https://repo.essentialsx.net/releases/</url>
        </repository>

    </repositories>

    <dependencies>
        <!-- PaperMC -->
        <dependency>
            <groupId>com.destroystokyo.paper</groupId>
            <artifactId>paper-api</artifactId>
            <version>1.16.5-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <!-- JetBrains Annotations -->
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>23.0.0</version>
            <scope>compile</scope>
        </dependency>
        <!-- Adventure API -->
        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>adventure-api</artifactId>
            <version>4.9.3</version>
            <scope>compile</scope>
        </dependency>
        <!-- Adventure Platform Bukkit -->
        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>adventure-platform-bukkit</artifactId>
            <version>4.0.1</version>
            <scope>compile</scope>
        </dependency>
        <!-- MiniMessage -->
        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>adventure-text-minimessage</artifactId>
            <version>4.10.0-SNAPSHOT</version>
            <scope>compile</scope>
        </dependency>
        <!-- Adventure Legacy Serializer -->
        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>adventure-text-serializer-legacy</artifactId>
            <version>4.9.3</version>
            <scope>compile</scope>
        </dependency>
        <!-- Adventure Gson Serializer -->
        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>adventure-text-serializer-gson</artifactId>
            <version>4.9.3</version>
            <scope>compile</scope>
        </dependency>
        <!-- Adventure Plain Text Serializer -->
        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>adventure-text-serializer-plain</artifactId>
            <version>4.9.3</version>
            <scope>compile</scope>
        </dependency>
        <!-- PlaceholderAPI -->
        <dependency>
            <groupId>me.clip</groupId>
            <artifactId>placeholderapi</artifactId>
            <version>2.11.1</version>
            <scope>provided</scope>
        </dependency>
        <!-- Gson -->
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.8.9</version>
            <scope>compile</scope>
        </dependency>
        <!-- bStats -->
        <dependency>
            <groupId>org.bstats</groupId>
            <artifactId>bstats-bukkit</artifactId>
            <version>2.2.1</version>
            <scope>compile</scope>
        </dependency>
        <!-- Vault -->
        <dependency>
            <groupId>com.github.MilkBowl</groupId>
            <artifactId>VaultAPI</artifactId>
            <version>1.7.1</version>
            <scope>provided</scope>
        </dependency>
        <!-- ConfigUpdater -->
        <dependency>
            <groupId>com.tchristofferson</groupId>
            <artifactId>ConfigUpdater</artifactId>
            <version>2.0-SNAPSHOT</version>
        </dependency>
        <!-- Maven Source Plugin -->
        <dependency>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-source-plugin</artifactId>
            <version>3.2.1</version>
            <scope>provided</scope>
        </dependency>
        <!-- EssentialsX -->
        <dependency>
            <groupId>net.essentialsx</groupId>
            <artifactId>EssentialsX</artifactId>
            <version>2.19.2</version>
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <groupId>org.bstats</groupId>
                    <artifactId>bstats-bukkit</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
    </dependencies>
</project>